login page logic and useForm hook

--- a/src/assets/styles/_utils.scss
+++ b/src/assets/styles/_utils.scss
@@ -63,7 +63,8 @@
 // Alerts
 .alert {
     position: relative;
-    margin: 0 .25rem;
+    margin-left: .25rem;
+    margin-right: .25rem;
     padding: .75rem;
     color: var(--color-base);
     border: 1px solid;
