add logic for login and forgot password

--- a/src/components/ui/Loader/Loader.module.scss
+++ b/src/components/ui/Loader/Loader.module.scss
@@ -6,6 +6,19 @@
     height: 100vh;
 }
 
+.overlayWrapper {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(255,255,255,0.9);
+    z-index: 900;
+}
+
 .container {
     display: flex;
     flex-direction: column;
