--- a/src/components/auth/auth.module.scss
+++ b/src/components/auth/auth.module.scss
@@ -3,7 +3,8 @@
     align-items: center;
     justify-content: center;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
+    min-height: 100vh;
     background-color: var(--color-dark);
     color: var(--color-light);
 }
@@ -14,6 +15,7 @@
     align-items: center;
     width: 100%;
     max-width: 600px;
+    padding: 0 .75rem;
 }
 
 .appBrand {
