--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -6,7 +6,7 @@ $color-dark: #222;
 $color-light: #CCC;
 
 // LIGHT THEME COLORS:
-$color-light-bg: #F4F1F5;
+$color-light-bg: #f4f1f5;
 $color-light-base: #222;
 $color-light-accent-light: #EFEFEF;
 $color-light-accent-dark: #666;
