--- a/src/components/AppLayout/Header/Header.module.scss
+++ b/src/components/AppLayout/Header/Header.module.scss
@@ -1,16 +1,20 @@
 .header {
-    --header-left: 50px;
-    position: fixed;
+    position: sticky;
     top: 0;
     left: var(--header-left);
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: calc(100vw - var(--header-left));
+    width: 100%;
     height: 4rem;
     padding: 1rem;
     border-bottom: 1px solid #CCC;
     transition: 300ms ease-in-out;
+
+    @media (max-width: 950px) {
+        width: 100vw;
+        left: 0;
+    }
 
     button {
         margin: 0;
@@ -18,9 +22,50 @@
         background-color: var(--color-light);
         line-height: 1;
         font-size: 1.1rem;
+
+        &[data-active=true] {
+            background-color: var(--color-base);
+            color: var(--color-light);
+        }
+
+        &.toggleBtnLg {
+            @media (max-width: 950px) {
+                display: none;
+            }
+        }
+
+        &.toggleBtnSm {
+            @media (min-width: 951px) {
+                display: none;
+            }
+        }
     }
 }
 
-.expanded {
-    --header-left: 250px;
+.dropDownMenu {
+    display: none;
+    list-style: none;
+    position: absolute;
+    right: 1rem;
+    top: 3.5rem;
+    width: 150px;
+    box-shadow: 0 4px 8px 2px rgba(0,0,0,0.25);
+    overflow: hidden;
+
+    li a {
+        display: flex;
+        align-items: center;
+        gap: .25rem;
+        padding: .5rem 1rem;
+        font-size: 1.2rem;
+        color: var(--color-base);
+        cursor: pointer;
+        text-decoration: none;
+
+        &:hover {
+            background-color: rgba(0,0,0,0.15);
+        }
+    }
 }
+
+.show { display: block; }
