--- a/src/components/AppLayout/Sidebar/Sidebar.module.scss
+++ b/src/components/AppLayout/Sidebar/Sidebar.module.scss
@@ -1,17 +1,128 @@
 .sidebar {
-    position: fixed;
-    left: 0;
-    top: 0;
     display: flex;
     flex-direction: column;
-    align-items: center;
     width: 250px;
-    height: 100%;
     background-color: var(--color-dark);
     color: var(--color-light);
     overflow: hidden;
     white-space: nowrap;
-    transition: 300ms ease-in-out;
+    transition: width 300ms ease-in-out;
+
+    a {
+        color: inherit;
+        transition: 250ms ease-in-out;
+        cursor: pointer;
+
+        &:hover {
+            opacity: .8;
+            text-decoration: none;
+        }
+    }
+
+    .brand {
+        width: 100%;
+        height: 4rem;
+        border-bottom: 1px solid #666;
+
+        h1 {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            height: 100%;
+        }
+    }
 }
 
-.hide { width: 50px; }
+.hidden {
+    width: 0;
+}
+
+.menuToggleBtn {
+    display: none;
+    position: absolute;
+    top: 1rem;
+    right: .25rem;
+    width: 35px;
+    height: 35px;
+    padding: 0;
+}
+
+.navMenu {
+    list-style: none;
+}
+
+.rootMenuItem {
+    width: 100%;
+    font-size: 1.1rem;
+    
+    & > div {
+        display: flex;
+        align-items: center;
+        gap: .25rem;
+        padding: .5rem 1rem .25rem 1rem;
+
+        &:hover {
+            background-color: rgba(255,2500,255,0.15);
+        }
+    }
+
+    .menuItemIcon {
+        font-size: 1.4rem;
+        padding-bottom: .25rem;
+    }
+
+    .menuItemBody {
+        width: 100%;
+        
+        a {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            width: 100%;
+        }
+    }
+}
+
+.subMenu {
+    list-style: none;
+
+    li {
+        padding: .5rem 0 .5rem 1.75rem;
+        font-size: 1rem;
+
+        a {
+            display: flex;
+            align-items: center;
+            gap: .25rem;
+        }
+
+        .menuItemIcon {
+            font-size: 1.1rem;
+        }
+
+        &:hover {
+            background-color: rgba(255,2500,255,0.15);
+        }
+    }
+}
+
+@media (max-width: 950px) {
+    .sidebar, .hidden {
+        position: absolute;
+        width: 0;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        z-index: 900;
+    }
+
+    .menuToggleBtn {
+        display: block;
+    }
+
+    .active {
+        width: 100%;
+        max-width: 350px;
+    }
+}
